tests/compile-fail/integration_suite__integration__type_check__return__missing_from_value.snap
---
source: tests/integration/type_check.rs
expression: stderr
---
error: value-returning function without a return
   ┌─ <input>:25:9
   │
25 │         inline int foo() { }
   │         ^^^^^^^^^^^^^^^^^^^^ has no return statements


